#19 changed swagger api definition, and related source to add new include_quality_metrics flag
